day 1 css advanced

--- a/about.html
+++ b/about.html
@@ -3,11 +3,14 @@
 <html>
     <head>
         <title>Portfolio Starter - About</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     
     <body>
         <header>
-            <h2>Portfolio Starter</h2>
+            <h2 class="logo main-color"><a href="index.html">Portfolio Starter</a></h2>
+
+            <!-- <h2 class="logo main-color">Portfolio Starter</h2> -->
 
             <nav>
                 <a href="./about.html">About Me</a>
@@ -16,6 +19,12 @@
             
         </header>
 
-        <h1>About Me</h1>
+        <h1 class="main-color work-title">About Me</h1>
     </body>
+
+    <footer>
+        <p>&copy; 2024</p>
+        <p>Developed by Rutgers Class</p>
+    </footer>
+
 </html>
