--- a/contact.html
+++ b/contact.html
@@ -3,13 +3,16 @@
 <html>
     <head>
         <title>Portfolio Starter - Contact</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     
     <body>
         <header>
-            <a href="index.html">
+            <h2 class="logo main-color"><a href="index.html">Portfolio Starter</a></h2>
+
+            <!-- <a href="index.html">
                 <h2>Portfolio Starter</h2>
-            </a>
+            </a> -->
             <nav>
                 <a href="./about.html">About Me</a>
                 <a href="./contact.html">Contact</a>
@@ -17,6 +20,12 @@
             
         </header>
 
-        <h1>Contact</h1>
+        <h1 class="main-color work-title">Contact</h1>
     </body>
+
+    <footer>
+        <p>&copy; 2024</p>
+        <p>Developed by Rutgers Class</p>
+    </footer>
+
 </html>
