learned positioning, basic animation, and creating animations

--- a/index.html
+++ b/index.html
@@ -17,9 +17,10 @@
         <h2 class="logo main-color"><a href="index.html">Portfolio Starter</a></h2>
 
         <nav>
-            <a href="./about.html">About Me</a>
-            <a href="./contact.html">Contact</a>
-            <!--  -->
+            <!-- <a href="./about.html">About Me</a>
+            <a href="./contact.html">Contact</a> -->
+            <a id="work-link" href="#work">Work</a>
+            <a href="#footer">Footer</a>
         </nav>
 
     </header>
@@ -44,7 +45,7 @@
 
     <h1 class="work-title main-color">My Work</h1>
 
-    <main>
+    <main id="work">
         <section class="main-section">
             <p>Paragraph 1</p>
             <p>Paragraph 2</p>
@@ -63,7 +64,7 @@
             <p>Paragraph 3</p>
         </section>
 
-        <section class="main-section">
+         <section class="main-section">
             <p>Paragraph 1</p>
             <p>Paragraph 2</p>
             <p>Paragraph 3</p>
@@ -82,7 +83,11 @@
         </section>
     </main>
 
-    <footer>
+    <div class="chat-box">
+        <button>Chat Now!</button>
+    </div>
+
+    <footer id="footer">
         <p>&copy; 2024</p>
         <p>Developed by Rutgers Class</p>
     </footer>
